SMM/smm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smm-ingress
  namespace: iks
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: smm-ingressgateway
              port:
                number: 80
